Prevent focus ring for links from covering text
by adding an `outline-offset`.

Before: https://i.imgur.com/J8JUune.png
After: https://i.imgur.com/qToynUz.png

Fixed: 1378525

--- a/front_end/ui/components/markdown_view/markdownLink.css
+++ b/front_end/ui/components/markdown_view/markdownLink.css
@@ -6,6 +6,7 @@
 
 .devtools-link {
   color: var(--color-link);
+  outline-offset: 1px;
   text-decoration: none;
 }
 
